prevent overflows

--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -49,6 +49,8 @@ article {
 
   table {
     border-collapse: collapse;
+    display: block;
+    overflow-x: auto;
   }
 
   table th {
@@ -88,8 +90,7 @@ pre {
 }
 
 pre {
-  white-space: pre-wrap;
-  hyphens: manual;
+  overflow-x: auto;
 }
 
 pre,
